BUGS/STYLING: fixed vertical alignment of Field values, metadata, and historical values. Fixed grid layout, addedd white drop shadow to create space at ends of historyRow.

--- a/src/components/DataField/DataField.module.css
+++ b/src/components/DataField/DataField.module.css
@@ -7,7 +7,7 @@
 .datafieldWrapper {
     display: grid;
     grid-template-columns: subgrid;
-    grid-column: 1 / -1;
+    grid-column: details-chevron / end;
     align-items: baseline;
     font-size: var(--text-sm);
     position: relative;
@@ -31,6 +31,7 @@
 }
 
 .datafieldChevron {
+    grid-column: details-chevron;
     background: none;
     border: none;
     padding: 0;
@@ -42,6 +43,7 @@
     text-align: center;
     line-height: 1;
     font-family: inherit;
+    transform: translateY(var(--field-chevron-y-shift));
 }
 
 .datafieldChevron:hover {
@@ -54,6 +56,7 @@
 }
 
 .datafieldLabel {
+    grid-column: label;
     color: var(--text-primary);
     font-weight: normal;
     cursor: default;
